<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_city_name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="Please put in your location"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/enter_city_name"
        tools:layout_editor_absoluteX="-62dp">

        <TextView
            android:id="@+id/addLocationConfirmation"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/city_display"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/latlong_display"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>



    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"
        android:text="Add Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/backToList"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="Back to Cities List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>