<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    app:layout_constraintVertical_bias="0.5">

    <TextView
        android:id="@+id/locationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="TextView" />

    <Button
        android:id="@+id/buttonLocationDetail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:text="Details" />

    <Button
        android:id="@+id/buttonDeletion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:text="Delete" />

</LinearLayout>